Fixed update password bug Fixed bet amount and change handler bugs Fixed not showing errors bugs

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -490,3 +490,13 @@ body {
 .navbar-header > .navbar-menu-button:focus, .navbar-header > .navbar-menu-button:hover, .navbar-header > .navbar-bet-slip-button:focus, .navbar-header > .navbar-bet-slip-button:hover {
   background-color: transparent;
 }
+
+.input-group-addon {
+  border-radius: 0px;
+  padding: 4px 6px;
+}
+
+.bet-amount {
+  border-radius: 0px;
+  padding: 6px 3px;
+}
